--- a/PalEats/PalEats/App.xaml
+++ b/PalEats/PalEats/App.xaml
@@ -2,31 +2,17 @@
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PalEats.App">
-    <!--
-        Define global resources and styles here, that apply to all pages in your app.
-    -->
     <Application.Resources>
         <ResourceDictionary>
-            <Color x:Key="Primary">#2196F3</Color>
-            <Style TargetType="Button">
-                <Setter Property="TextColor" Value="White"></Setter>
-                <Setter Property="VisualStateManager.VisualStateGroups">
-                    <VisualStateGroupList>
-                        <VisualStateGroup x:Name="CommonStates">
-                            <VisualState x:Name="Normal">
-                                <VisualState.Setters>
-                                    <Setter Property="BackgroundColor" Value="{StaticResource Primary}" />
-                                </VisualState.Setters>
-                            </VisualState>
-                            <VisualState x:Name="Disabled">
-                                <VisualState.Setters>
-                                    <Setter Property="BackgroundColor" Value="#332196F3" />
-                                </VisualState.Setters>
-                            </VisualState>
-                        </VisualStateGroup>
-                    </VisualStateGroupList>
-                </Setter>
-            </Style>
-        </ResourceDictionary>        
+            <Color x:Key="backgroundColor">#FFF4EC</Color>
+            <Color x:Key="MainHeadandNavbarColor">#FBD6BC</Color>
+            <Color x:Key="MainTextColor">#543214</Color>
+            <Color x:Key="RecipeHeaderColor">#F9EFE3</Color>
+            <Color x:Key="RecipePanelBackground">#F2F2F2</Color>
+            <Color x:Key="IngredientIconBackground">#F9EFE3</Color>
+            <Color x:Key="CatagorySelectionCardColor">#F9EFE3</Color>
+            <Color x:Key="ClickedNavbarButtonBackground">#E7C1C1</Color>
+
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
