--- a/PalEats/PalEats/Views/CategoryPage.xaml
+++ b/PalEats/PalEats/Views/CategoryPage.xaml
@@ -1,9 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PalEats.Views.CategoryPage" NavigationPage.HasNavigationBar="False"               
-             xmlns:components="clr-namespace:PalEats.Views" >
-  
+             xmlns:local="clr-namespace:PalEats.ViewModels"
+             x:Class="PalEats.Views.CategoryPage"
+             NavigationPage.HasNavigationBar="False"               
+             xmlns:components="clr-namespace:PalEats.Views">
+
+    <ContentPage.BindingContext>
+        <local:CategoryPageViewModel/>
+    </ContentPage.BindingContext>
+
     <ContentPage.Content>
         <StackLayout BackgroundColor="{StaticResource backgroundColor }">
             <StackLayout>
@@ -12,6 +18,39 @@
                         <Label Text="PalEats" Padding="15" HorizontalOptions="StartAndExpand" FontSize="30"  TextColor="{StaticResource MainTextColor}" />
                     </Frame>
                 </StackLayout>
+            </StackLayout>
+            <StackLayout Padding="15" BackgroundColor="#FFF4EC">
+
+                <CollectionView ItemsSource="{Binding Categories}" SelectionMode="Single"
+                >
+                    <CollectionView.ItemsLayout>
+                        <GridItemsLayout Orientation="Vertical" Span="2" HorizontalItemSpacing="15" VerticalItemSpacing="15"/>
+                    </CollectionView.ItemsLayout>
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <Frame IsClippedToBounds="True" Padding="0" HeightRequest="270" CornerRadius="20">
+                                <RelativeLayout>
+                                    <Image Source="{Binding ImgUrl}" 
+                                   Aspect="AspectFill"
+                                   RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width}"
+                                   RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height}"
+                                   
+                                   />
+
+                                    <Grid RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width}"
+                                      RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height}"
+                                      >
+                                        <Frame HeightRequest="60" VerticalOptions="End" BackgroundColor="#F9EFE3" Opacity="0.6" CornerRadius="20">
+                                            <Label Text="{Binding CategoryName}" HorizontalOptions="Center" FontAttributes="Bold" VerticalOptions="Center" TextColor="#543214" FontSize="Large"/>
+                                        </Frame>
+                                    </Grid>
+
+                                </RelativeLayout>
+                            </Frame>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+
             </StackLayout>
             <StackLayout  VerticalOptions="EndAndExpand">
                 <components:NavigationComponent/>
