Category to Subcategory Navigation

--- a/PalEats/PalEats/Views/CategoryPage.xaml
+++ b/PalEats/PalEats/Views/CategoryPage.xaml
@@ -19,10 +19,9 @@
                     </Frame>
                 </StackLayout>
             </StackLayout>
-            <StackLayout Padding="15" BackgroundColor="#FFF4EC">
+            <StackLayout Padding="15" Margin="0,30,0,0">
 
-                <CollectionView ItemsSource="{Binding Categories}" SelectionMode="Single"
-                >
+                <CollectionView ItemsSource="{Binding Categories}" SelectionMode="Single" SelectionChanged="OnCollectionViewSelectionChanged">
                     <CollectionView.ItemsLayout>
                         <GridItemsLayout Orientation="Vertical" Span="2" HorizontalItemSpacing="15" VerticalItemSpacing="15"/>
                     </CollectionView.ItemsLayout>
