--- a/PalEats/PalEats/Views/SubcategoryPage.xaml
+++ b/PalEats/PalEats/Views/SubcategoryPage.xaml
@@ -17,6 +17,9 @@
                     </Grid>
                 </Frame>
             </StackLayout>
+            <Label x:Name="CurrentCategory"
+                VerticalOptions="CenterAndExpand" 
+                HorizontalOptions="CenterAndExpand" />
             <StackLayout  VerticalOptions="EndAndExpand">
                 <components:NavigationComponent/>
             </StackLayout>
