--- a/PalEats/PalEats/Views/NavigationComponent.xaml
+++ b/PalEats/PalEats/Views/NavigationComponent.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PalEats.Views.NavigationComponent">
 
-    <StackLayout Orientation="Horizontal" BackgroundColor="{StaticResource MainHeadandNavbarColor}" Spacing="70"  HeightRequest="50" Padding="80,0,90,0">
+    <StackLayout Orientation="Horizontal" BackgroundColor="{StaticResource MainHeadandNavbarColor}" Spacing="70" Margin="-7" HeightRequest="50" Padding="80,0,90,0">
         <ImageButton  BackgroundColor="{StaticResource MainHeadandNavbarColor}"   Source="search.png"  Clicked="Button_Clicked" Aspect="AspectFit" WidthRequest="30" HeightRequest="26"  />
         <ImageButton  BackgroundColor="{StaticResource MainHeadandNavbarColor}" Source="home.png" Aspect="AspectFit"  WidthRequest="30" HeightRequest="26"  Clicked="Button_Clicked_1" />
         <ImageButton  BackgroundColor="{StaticResource MainHeadandNavbarColor}" Source="fav.png" Aspect="AspectFit" WidthRequest="28.67" HeightRequest="26"  Clicked="Button_Clicked_2"   />
