--- a/PalEats/PalEats/Views/SignUpPage.xaml
+++ b/PalEats/PalEats/Views/SignUpPage.xaml
@@ -74,7 +74,7 @@
                 Margin="0,40,0,20"
                 Grid.Row="4" />
 
-        <Label Text="Or Sign UpUsing"
+        <Label Text="Or Continue As "
             HorizontalOptions="Center"
             FontSize="20"
             TextColor="{StaticResource MainTextColor}"
