PE-246 implemented add to favorite functionality in the recipe page

--- a/PalEats/PalEats/Views/RecipePage.xaml
+++ b/PalEats/PalEats/Views/RecipePage.xaml
@@ -36,7 +36,7 @@
                                 <Label Text="{Binding Recipe.Calories}" FontSize="Small" HorizontalTextAlignment="Center"/>
                             </StackLayout>
                             <StackLayout Orientation="Vertical" Spacing="5" >
-                                <ImageButton BackgroundColor="{StaticResource backgroundColor}" Source="favorite.png" Aspect="AspectFit" HeightRequest="40" WidthRequest="40" />
+                                <ImageButton BackgroundColor="{StaticResource backgroundColor}" Command="{Binding FavoriteButtonClicked}" Source="favorite.png" Aspect="AspectFit" HeightRequest="40" WidthRequest="40" />
                                 <Label Text="Favorite" FontSize="Small" HorizontalTextAlignment="Center"/>
 
                             </StackLayout>
