--- a/PalEats/PalEats/Views/RecipePage.xaml
+++ b/PalEats/PalEats/Views/RecipePage.xaml
@@ -3,10 +3,9 @@
              xmlns:local="clr-namespace:PalEats.ViewModels"
              xmlns:components="clr-namespace:PalEats.Views"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PalEats.Views.RecipePage" NavigationPage.HasNavigationBar="False" >
-    <ContentPage.BindingContext>
-        <local:RecipePageViewModel/>
-    </ContentPage.BindingContext>
+             x:Class="PalEats.Views.RecipePage" 
+             NavigationPage.HasNavigationBar="False" >
+
     <ContentPage.Content>
         <Grid>
             <Grid.RowDefinitions>
