--- a/PalEats/PalEats/Views/RecipePage.xaml
+++ b/PalEats/PalEats/Views/RecipePage.xaml
@@ -5,6 +5,7 @@
              x:Class="PalEats.Views.RecipePage" 
              NavigationPage.HasNavigationBar="False" >
 
+    
     <ContentPage.Content>
         <Grid>
             <Grid.RowDefinitions>
@@ -34,7 +35,7 @@
                                 <Label Text="{Binding Recipe.Calories}" FontSize="Small" HorizontalTextAlignment="Center"/>
                             </StackLayout>
                             <StackLayout Orientation="Vertical" Spacing="5" >
-                                <ImageButton BackgroundColor="{StaticResource backgroundColor}" Command="{Binding FavoriteButtonClicked}" Source="favorite.png" Aspect="AspectFit" HeightRequest="40" WidthRequest="40" />
+                                <ImageButton BackgroundColor="{StaticResource backgroundColor}" Command="{Binding FavoriteButtonClicked}" Source="{Binding FavoritePath}" Aspect="AspectFit" HeightRequest="40" WidthRequest="40" />
                                 <Label Text="Favorite" FontSize="Small" HorizontalTextAlignment="Center"/>
 
                             </StackLayout>
