--- a/PalEats/PalEats/Views/SignInPage.xaml
+++ b/PalEats/PalEats/Views/SignInPage.xaml
@@ -9,7 +9,8 @@
     </ContentPage.BindingContext>
 
     <Grid Margin="16,32,16,32" VerticalOptions="FillAndExpand">
-        <Grid.RowDefinitions >
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
@@ -28,67 +29,75 @@
 
         <Frame CornerRadius="20"
                BackgroundColor="{StaticResource FrameBackgroundColor}"
-               Padding="20,5" 
+               Padding="20,5"
                Margin="30,10"
                HasShadow="True"
                Grid.Row="1">
-            <Entry Text="{Binding SignInModel.Email}" 
-                   Placeholder="Email" 
+            <Entry Text="{Binding SignInModel.Email}"
+                   Placeholder="Email"
                    FontSize="Small" />
         </Frame>
 
-        <Frame CornerRadius="20"        
+        <Frame CornerRadius="20"
                BackgroundColor="{StaticResource FrameBackgroundColor}"
-               Padding="20,5" 
+               Padding="20,5"
                Margin="30,10"
                HasShadow="True"
                Grid.Row="2">
-            <Entry Text="{Binding SignInModel.Password}" 
-                   Placeholder="Password" 
-                   IsPassword="True" 
+            <Entry Text="{Binding SignInModel.Password}"
+                   Placeholder="Password"
+                   IsPassword="True"
                    FontSize="Small" />
         </Frame>
 
-        <StackLayout HorizontalOptions="CenterAndExpand"
-                     Grid.Row="3">
-            <Button Text="Sign In" 
-                    BackgroundColor="{StaticResource FrameBackgroundColor}"
-                    TextColor="{StaticResource MainTextColor}"
-                    Command="{Binding SignInCommand}"
-                    CornerRadius="20"
-                    FontSize="20"
-                    Margin="0,40"
-                    WidthRequest="200" />
-            <Label Text="Or Continue As "
-            HorizontalOptions="Center"
-            FontSize="20"
-            TextColor="{StaticResource MainTextColor}"/>
+        <Button Text="Sign In"
+                BackgroundColor="{StaticResource FrameBackgroundColor}"
+                TextColor="{StaticResource MainTextColor}"
+                Command="{Binding SignInCommand}"
+                HorizontalOptions="CenterAndExpand" 
 
+                CornerRadius="20"
+                FontSize="20"
+                Margin="0,40,0,20"
+                Grid.Row="3" />
+
+        <Label Text="Or Continue As "
+               HorizontalOptions="Center"
+               FontSize="20"
+               TextColor="{StaticResource MainTextColor}"
+               Grid.Row="4" />
+
+        <StackLayout Orientation="Horizontal"
+                     HorizontalOptions="Center"
+                     Margin="0,20"
+                     Spacing="20"
+                     Grid.Row="5">
 
 
             <ImageButton Source="guest.png"
-                     HeightRequest="62"
-                     WidthRequest="80"
-                     Aspect="AspectFill"
-                     Command="{Binding OnGuestClicked}"
-                     Padding="40"
-                     Margin="10"
-                     BackgroundColor="Transparent"
-                     CornerRadius="30" />
-            
+             HeightRequest="62"
+             WidthRequest="80"
+             Aspect="AspectFill"
+             Command="{Binding GuestClicked}"
+             Padding="5"
+             BackgroundColor="Transparent"
+             CornerRadius="30" />
+
+
         </StackLayout>
 
         <Label Text="Don't have an account yet? Sign up"
-           HorizontalTextAlignment="Center"
-           FontFamily="Lato"
-           TextColor="{StaticResource MainTextColor}"
-           Grid.Row="4">
+               HorizontalTextAlignment="Center"
+               FontFamily="Lato"
+               TextColor="{StaticResource MainTextColor}"
+               Margin="0,20"
+               Grid.Row="6">
             <Label.FormattedText>
                 <FormattedString>
                     <Span Text="Don't have an account yet? " />
                     <Span Text="Sign up" TextDecorations="Underline" TextColor="Blue">
                         <Span.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding Path=OnSignUpTappedCommand}" />
+                            <TapGestureRecognizer Command="{Binding OnSignUpTapped}" />
                         </Span.GestureRecognizers>
                     </Span>
                 </FormattedString>
